# V_VLM

./: .gitignore  AGENTS.md  README.md  compare_models.py  compare_predictions.py  main.py  requirements.txt  train.py
benchmarks/cpp_onnx/batch_test/: per_image.csv  summary.json
benchmarks/cpp_onnx/batch_test/comparisons/: 01_missing_hole_03.json  01_open_circuit_02.json  01_short_02.json  04_missing_hole_04.json  04_open_circuit_02.json  04_open_circuit_03.json  04_short_02.json  04_short_03.json  05_open_circuit_03.json  05_open_circuit_04.json  05_open_circuit_06.json  05_short_03.json  05_short_04.json  05_short_06.json  07_missing_hole_03.json  09_open_circuit_05.json  09_short_05.json  10_open_circuit_06.json  11_short_02.json  12_open_circuit_03.json  12_short_03.json
benchmarks/cpp_onnx/batch_test/cpp/: 01_missing_hole_03.json  01_open_circuit_02.json  01_short_02.json  04_missing_hole_04.json  04_open_circuit_02.json  04_open_circuit_03.json  04_short_02.json  04_short_03.json  05_open_circuit_03.json  05_open_circuit_04.json  05_open_circuit_06.json  05_short_03.json  05_short_04.json  05_short_06.json  07_missing_hole_03.json  09_open_circuit_05.json  09_short_05.json  10_open_circuit_06.json  11_short_02.json  12_open_circuit_03.json  12_short_03.json
benchmarks/cpp_onnx/batch_test/python/: 01_missing_hole_03.json  01_open_circuit_02.json  01_short_02.json  04_missing_hole_04.json  04_open_circuit_02.json  04_open_circuit_03.json  04_short_02.json  04_short_03.json  05_open_circuit_03.json  05_open_circuit_04.json  05_open_circuit_06.json  05_short_03.json  05_short_04.json  05_short_06.json  07_missing_hole_03.json  09_open_circuit_05.json  09_short_05.json  10_open_circuit_06.json  11_short_02.json  12_open_circuit_03.json  12_short_03.json
benchmarks/cpp_onnx/comparison/: comparison.csv  comparison.json
benchmarks/cpp_onnx/reference/: python_onnx_result.json
benchmarks/cpp_onnx/single/: detections.csv  result.json
benchmarks/onnx/: comparison.csv  comparison.json  cuda_diagnostics.json  cuda_diagnostics_require_cuda.json  final_comparison.json  fn_analysis.json  g1_diagnostic_report.md  onnx_metrics.json  onnx_predictions.json  onnx_validation.json  pytorch_metrics.json  pytorch_predictions.json  pytorch_vs_onnx.csv
benchmarks/onnx/debug/: after_conf_filter.json  after_nms.json  debug_summary.json  final_detections.json  raw_output.npy
benchmarks/onnx/failure_cases/: failure_cases.json
benchmarks/onnx/gpu_comparison/: benchmark_report.md  environment.json  image_results.csv  run_config.json  summary.json  timing_raw.csv  timing_statistics.csv
benchmarks/onnx/gpu_comparison/per_image/: 01_missing_hole_03.json  01_open_circuit_02.json  01_short_02.json  04_missing_hole_04.json  04_open_circuit_02.json  04_open_circuit_03.json  04_short_02.json  04_short_03.json  05_open_circuit_03.json  05_open_circuit_04.json  05_open_circuit_06.json  05_short_03.json  05_short_04.json  05_short_06.json  07_missing_hole_03.json  09_open_circuit_05.json  09_short_05.json  10_open_circuit_06.json  11_short_02.json  12_open_circuit_03.json  12_short_03.json
benchmarks/onnx/test_report/: environment.json  image_results.csv  run_config.json  summary.json  timing.csv
benchmarks/onnx/test_report/per_image/: 01_missing_hole_03.json  01_open_circuit_02.json  (+19 more)
config/: settings.py
cpp_inference/: CMakeLists.txt  README.md
cpp_inference/config/: classes.txt
cpp_inference/include/: detector.hpp  image_preprocessor.hpp  inference_result.hpp  postprocessor.hpp
cpp_inference/src/: detector.cpp  image_preprocessor.cpp  main.cpp  postprocessor.cpp
cpp_inference/tests/: test_postprocessing.cpp  test_preprocessing.cpp
data/vlm_test_images/: README.md
docs/: yolo_vlm_terminal.md
image_processing/: __init__.py  bbox_drawer.py  image_loader.py  preprocessor.py
model/: __init__.py  defect_info.py  inspection_result.py  statistics_result.py  yolo_result.py
repository/: __init__.py  db_manager.py  defect_repository.py  inspection_repository.py  schema.sql
scripts/: compare_python_cpp_onnx.py  compare_python_cpp_onnx_batch.py  compare_pytorch_onnx.py  compare_pytorch_onnx_batch.py  console_encoding.py  diagnose_ollama_payload.py  diagnose_onnxruntime_cuda.py  evaluate_onnx.py  run_vlm_test_batch.py  test_vlm_repeatability.py  test_yolo_vlm.py  validate_onnx_model.py  write_python_onnx_reference.py
service/: auto_inspection_service.py  detection_location.py  image_service.py  inspection_history_service.py  inspection_service.py  ollama_status_service.py  onnx_detector.py  result_service.py  statistics_service.py  vlm_service.py  yolo_service.py
tests/: __init__.py  test_app_smoke.py  test_compare_python_cpp_onnx_batch.py  test_compare_pytorch_onnx.py  test_compare_pytorch_onnx_batch.py  test_console_encoding.py  test_cpp_onnx_inference_sources.py  test_crop_montage.py  test_detection_location.py  test_diagnose_ollama_payload.py  test_diagnose_onnxruntime_cuda.py  test_evaluate_onnx.py  test_image_preprocessor.py  test_image_viewer.py  test_inspection_history_deletion.py  test_inspection_service.py  test_ollama_status_service.py  test_onnx_detector.py  test_prompt_builder.py  test_repository.py  test_response_parser.py  test_statistics_service.py  test_statistics_view.py  test_status_view.py  test_validate_onnx_model.py  test_vlm_batch.py  test_vlm_client.py  test_vlm_repeatability.py  test_vlm_service.py  test_yolo_service.py  test_yolo_vlm_cli.py
tools/: check_label_distribution.py  convert_voc_to_yolo.py  split_yolo_dataset.py  stratified_split_yolo_dataset.py  visualize_voc_annotations.py
view/: __init__.py  history_view.py  image_viewer.py  inspection_view.py  main_window.py  statistics_view.py  status_view.py
viewmodel/: __init__.py  history_viewmodel.py  inspection_viewmodel.py  statistics_viewmodel.py  status_viewmodel.py
vlm/: __init__.py  crop_montage.py  image_preprocessor.py  ollama_response.py  prompt_builder.py  response_parser.py  response_schema.py  vlm_client.py
yolo/: __init__.py  detector.py  model_loader.py  yolo_config.py
